// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generator cases test getMWACases 1`] = `
[
  {
    "buildTools": "webpack",
    "language": "ts",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "js",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "js",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "ts",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "js",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "ts",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "js",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "js",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "buildTools": "webpack",
    "language": "ts",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "buildTools": "rspack",
    "language": "js",
    "packageManager": "yarn",
    "solution": "mwa",
  },
]
`;

exports[`test generator cases test getModuleCases 1`] = `
[
  {
    "language": "js",
    "packageManager": "yarn",
    "solution": "module",
  },
  {
    "language": "js",
    "packageManager": "npm",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "module",
  },
  {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "npm",
    "solution": "module",
  },
]
`;

exports[`test generator cases test getModuleNewCases 1`] = `
[
  {
    "actionType": "function",
    "function": "test",
  },
  {
    "actionType": "function",
    "function": "tailwindcss",
  },
  {
    "actionType": "function",
    "function": "storybook",
  },
  {
    "actionType": "function",
    "function": "runtimeApi",
  },
]
`;

exports[`test generator cases test getMonorepoCases 1`] = `
[
  {
    "packageManager": "pnpm",
    "solution": "monorepo",
  },
  {
    "packageManager": "yarn",
    "solution": "monorepo",
  },
]
`;

exports[`test generator cases test getMonorepoNewCases 1`] = `
[
  {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "mwa",
  },
  {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "mwa",
  },
  {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "mwa_test",
  },
  {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "mwa_test",
  },
  {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "module",
  },
  {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "inner_module",
  },
  {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "inner_module",
  },
]
`;
